--- a/StartPage.html
+++ b/StartPage.html
@@ -33,9 +33,9 @@ div.relative1 {
     <input type="password" placeholder="Enter Password" name="psw" required>
 </div>
 <div class= "relative1">
-  <input type="button" onclick="location.href='page.php';" value="LogIn" />
+  <input type="button" onclick="location.href='HomePage.php';" value="LogIn" />
 
-    <input type="button" onclick="location.href='registration.php';" value="Register" />
+    <input type="button" onclick="location.href='RegistrationPage.php';" value="Register" />
 </div>
 
 
